# frappe_supabase_sync

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_TESTING_SUMMARY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  custom_mappings.json  docker-compose.yml  main.py  pyproject.toml  pytest-report.xml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: prometheus.yml
docs/: .env.example  CHANGELOG.md  COMPREHENSIVE_TESTING_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  SCHEMA_DISCOVERY_GUIDE.md  TESTING_GUIDE.md
scripts/: apply_custom_mappings.py  deploy.sh  final_verification.py  get_supabase_keys.py  quick_setup.py
src/: __init__.py  config.py  models.py
src/api/: __init__.py  schema_api.py
src/discovery/: __init__.py  schema_discovery.py
src/engine/: __init__.py  sync_engine.py
src/handlers/: __init__.py  frappe_webhook.py  supabase_webhook.py
src/mapping/: __init__.py  complex_mapper.py  field_mapper.py
src/monitoring/: __init__.py  health.py  metrics.py
src/queue/: __init__.py  sync_queue.py
src/sync_queue_module/: sync_queue.py
src/utils/: __init__.py  frappe_client.py  logger.py  phone_normalizer.py  retry_utils.py  supabase_client.py  webhook_deduplicator.py
tests/: __init__.py  conftest.py  simple_test.py  test_api.py  test_custom_mappings.py  test_field_mapping.py  test_mappings_final.py  test_mappings_standalone.py  test_real_data_mappings.py  test_schema_discovery.py  test_setup.py  test_supabase_schema.py  test_sync_engine.py  test_webhook_handlers.py  test_webhooks.py  test_without_supabase.py
